DAY 05-ingress/penwin.site-ingress/2demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-demo
  template:
    metadata:
      labels:
        app: httpd-demo
    spec:
      containers:
      - name: httpd-demo
        image: httpd:2.4.63
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: httpd-demo
