DAY 05-ingress/penwin.site-ingress/ingress_resource.yml
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.1/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # HTTP and HTTPS traffic need to be served without forcing SSL
    nginx.ingress.kubernetes.io/use-regex: "true"  # Enables regular expressions for path matching. for example /httpd/order -> order /httpd/order/payment -> payment
    nginx.ingress.kubernetes.io/rewrite-target: /$2 #  This rewrites the request path, preserving part of the original URL.`/nginx/dashboard` → Becomes `/dashboard` inside the service
spec:
  ingressClassName: nginx
  rules:
   - host: www.penwin.site
     http:
      paths:
      - path: /nginx(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-demo
            port:
              number: 80
      - path: /httpd(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: httpd-demo
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-demo
            port:
              number: 80
